@@ -76,10 +76,34 @@ class tx_extdeveval_buildautoloadregistry {
 	public function createAutoloadRegistryForCore() {
 		$classNameToFileMapping = array();
 
-		if ($this->isExtensionCmsIncluded()) {
-			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping, PATH_t3lib, '', 'PATH_t3lib . \'|\'');
-			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping, t3lib_extMgm::extPath('lang'), '', 't3lib_extMgm::extPath(\'lang\') . \'|\'');
+			// for >= TYPO3 6.0
+		if ($this->isAtLeastVersion('6.0.0')) {
+				// Defines order of variables in output file:
+			$classNameToFileMapping['t3libClasses'] = array();
+			$classNameToFileMapping['typo3Classes'] = array();
+
+			foreach (array('classes', 'interfaces') as $folder) {
+				$this->buildAutoloadRegistryForSinglePath(
+					$classNameToFileMapping['typo3Classes'],
+					PATH_typo3 . $folder . DIRECTORY_SEPARATOR, '',
+					'PATH_typo3 . \'' . $folder . DIRECTORY_SEPARATOR . '|\'',
+					FALSE
+				);
+			}
+
+			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping['typo3Classes'], PATH_typo3, '', 'PATH_typo3 . \'|\'', FALSE, 'php,inc');
+			$this->removeClassesNamesFromAutoloadRegistry($classNameToFileMapping['typo3Classes'], '#^sc_#i');
+			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping['t3libClasses'], PATH_t3lib, '', 'PATH_t3lib . \'|\'');
+			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping['typo3Classes'], t3lib_extMgm::extPath('lang'), '', 't3lib_extMgm::extPath(\'lang\') . \'|\'');
 			$autoloadFileString = $this->generateAutoloadPHPFileDataForCore($classNameToFileMapping);
+
+			// for >= TYPO3 4.5
+		} elseif ($this->isExtensionCmsIncluded()) {
+			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping['t3libClasses'], PATH_t3lib, '', 'PATH_t3lib . \'|\'');
+			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping['t3libClasses'], t3lib_extMgm::extPath('lang'), '', 't3lib_extMgm::extPath(\'lang\') . \'|\'');
+			$autoloadFileString = $this->generateAutoloadPHPFileDataForCore($classNameToFileMapping);
+
+			// for < TYPO3 4.5
 		} else {
 			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping, PATH_t3lib, '', 'PATH_t3lib . \'|\'');
 			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping, PATH_tslib, '', 'PATH_tslib . \'|\'');
@@ -125,24 +149,26 @@ class tx_extdeveval_buildautoloadregistry {
 	 * Does NOT escape the values in the associative array. Includes the <?php ... ?> syntax and an optional global prefix.
 	 *
 	 * @param	array	$classNameToFileMapping class name to file mapping
-	 * @param	array	$globalPrefixes	Global prefixes which are prepended to all code.
 	 * @return	string	The full PHP string
 	 */
-	protected function generateAutoloadPHPFileDataForCore($classNameToFileMapping, array $globalPrefixes = array()) {
+	protected function generateAutoloadPHPFileDataForCore(array $classNameToFileMapping) {
 		$output = '<?php' . PHP_EOL;
 		$output .= '// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.' . PHP_EOL;
 		$output .= '// This file was generated on ' . date('Y-m-d H:i') . PHP_EOL;
 		$output .= PHP_EOL;
-		$output .= implode(PHP_EOL, $globalPrefixes) . PHP_EOL;
-		$output .= '$t3libClasses = array(' . PHP_EOL;
-		foreach ($classNameToFileMapping as $className => $quotedFileName) {
-			$output .= '	\'' . $className . '\' => ' . $quotedFileName . ',' . PHP_EOL;
+
+		foreach ($classNameToFileMapping as $sectionName => $sectionClasses) {
+			$output .= '$' . $sectionName . ' = array(' . PHP_EOL;
+			foreach ($sectionClasses as $className => $quotedFileName) {
+				$output .= '	\'' . $className . '\' => ' . $quotedFileName . ',' . PHP_EOL;
+			}
+			$output .= ');' . PHP_EOL;
+			$output .= PHP_EOL;
 		}
-		$output .= ');' . PHP_EOL;
-		$output .= PHP_EOL;
+
 		$output .= '$tslibClasses = require(PATH_typo3 . \'sysext/cms/ext_autoload.php\');' . PHP_EOL;
 		$output .= PHP_EOL;
-		$output .= 'return array_merge($t3libClasses, $tslibClasses);' . PHP_EOL;
+		$output .= 'return array_merge($' . implode(', $', array_keys($classNameToFileMapping)) . ', $tslibClasses);' . PHP_EOL;
 		$output .= '?>';
 		return $output;
 	}
@@ -154,10 +180,24 @@ class tx_extdeveval_buildautoloadregistry {
 	 * @param	string	$path	Path which should be crawled
 	 * @param	string	$excludeRegularExpression	Exclude regular expression, to exclude certain files from being processed
 	 * @param	string	$valueWrap	Wrap for the file name
+	 * @param	boolean $includeSubFolders Whether to include sub folders
+	 * @param	string $fileExtensionList List of file extensions to consider
 	 * @return void
 	 */
-	protected function buildAutoloadRegistryForSinglePath(&$classNameToFileMapping, $path, $excludeRegularExpression = '', $valueWrap = '\'|\'') {
-		$extensionFileNames = t3lib_div::removePrefixPathFromList(t3lib_div::getAllFilesAndFoldersInPath(array(), $path, 'php', FALSE, 99, $excludeRegularExpression), $path);
+	protected function buildAutoloadRegistryForSinglePath(&$classNameToFileMapping, $path, $excludeRegularExpression = '', $valueWrap = '\'|\'', $includeSubFolders = TRUE, $fileExtensionList = 'php') {
+		$recursivityLevels = ($includeSubFolders ? 99 : 1);
+
+		$extensionFileNames = t3lib_div::removePrefixPathFromList(
+			t3lib_div::getAllFilesAndFoldersInPath(
+				array(),
+				$path,
+				$fileExtensionList,
+				FALSE,
+				$recursivityLevels,
+				$excludeRegularExpression
+			),
+			$path
+		);
 
 		foreach ($extensionFileNames as $extensionFileName) {
 			$classNamesInFile = $this->extractClassNames($path . $extensionFileName);
@@ -168,6 +208,21 @@ class tx_extdeveval_buildautoloadregistry {
 		}
 
 		ksort($classNameToFileMapping);
+	}
+
+	/**
+	 * Removes classes that match a given regular expression pattern.
+	 *
+	 * @param array $classNameToFileMapping
+	 * @param string $regularExpression
+	 * @return void
+	 */
+	protected function removeClassesNamesFromAutoloadRegistry(array &$classNameToFileMapping, $regularExpression) {
+		foreach ($classNameToFileMapping as $className => $fileReference) {
+			if (preg_match($regularExpression, $className)) {
+				unset($classNameToFileMapping[$className]);
+			}
+		}
 	}
 
 	/**
@@ -302,6 +357,16 @@ class tx_extdeveval_buildautoloadregistry {
 	 */
 	protected function isExtensionCmsIncluded() {
 		return (t3lib_div::int_from_ver(TYPO3_version) >= 4005000);
+	}
+
+	/**
+	 * Determines whether a given TYPO3 version is used.
+	 *
+	 * @param string $version
+	 * @return boolean
+	 */
+	protected function isAtLeastVersion($version) {
+		return (t3lib_div::int_from_ver(TYPO3_version) >= t3lib_div::int_from_ver($version));
 	}
 }
 ?>
